hphp/test/slow/traits/diamond_use/diamond_use_final2.php.expectf
Fatal error: Cannot override final method C::foo() in %s/diamond_use_final2.php on line 16
